--- a/src/components/PostComments/PostComments.module.css
+++ b/src/components/PostComments/PostComments.module.css
@@ -1,12 +1,5 @@
-.post-comments-form-textarea {
-    color: #333;
-    font-size: 14px;
-    line-height: 22px;
-    margin-bottom: 24px;
-}
-
 .post-comments {
-    
+    margin-top: 16px; /* Adicionado espaçamento superior para separação */
 }
 
 .post-comment {
@@ -34,6 +27,9 @@
     width: 100%;
     margin-bottom: 8px;
     padding: 8px 16px;
+    color: #333;
+    font-size: 14px;
+    line-height: 22px;
 }
 
 .post-comments-form-button {
